log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput 
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: logoutput-volume 
          persistentVolumeClaim:
            claimName: image-claim
        - name: configmap-volume
          configMap:
            name: logoutput-configmap
      containers:
        - name: logoutput
          image: tfhuhtal/logoutput-finder:2.06
          volumeMounts: 
            - name: logoutput-volume
              mountPath: /usr/src/app/files
            - name: configmap-volume 
              mountPath: /usr/src/app/config
        - name: logoutput-hasher
          image: tfhuhtal/logoutput-hasher:1.101
          volumeMounts:
            - name: logoutput-volume
              mountPath: /usr/src/app/files
